# poker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  P2P_NETWORK_IMPLEMENTATION.md  P2P_NETWORK_SUMMARY.md  README.md  build.sh  build_p2p.sh  build_tournament.sh  poker_demo_27_lowball.c  poker_demo_9_player_beautiful.c  poker_game.c  run.sh  standalone_27_draw.c
ai/: CMakeLists.txt
ai/include/ai/: ai_player.h  personality.h
ai/src/: ai_engine.c  ai_player.c  personality.c
assets/: README.md
assets/sprites/: cards
client/: CMakeLists.txt
client/include/client/: input_handler.h
client/src/: input_handler.c
client/ui/: CMakeLists.txt
client/ui/include/ui/: layout_interface.h
client/ui/src/: render_helpers.c
client/ui/src/layouts/: heads_up.c
common/: CMakeLists.txt
common/src/: autosave.c  cards.c  deck.c  error.c  game_manager.c  game_state.c  hand_eval.c  hand_eval_tables.c  logger.c  persistence.c  player.c
demos/: CMakeLists.txt  README.md  ai_personality_showcase.c  ai_showcase_demo.c  ai_skill_levels_demo.c  basic_test.c  error_logging_demo.c  hand_history_demo.c  hand_history_replay_demo.c  hand_history_replay_simple.c  multi_table_tournament_demo.c  multi_table_tournament_demo_simple.c  p2p_poker_demo.c  persistence_demo.c  phh_extract_interesting.c  phh_extract_simple.c  phh_integration_demo.c  platform_showcase.c  poker_animation_final_pixel.c  poker_animation_spec.md  poker_animation_test.c  poker_interactive_complete.c  poker_interactive_hero.c  poker_interactive_pixel.c  poker_pixel_10player_lowball_v2.c  poker_pixel_10player_professional.c  poker_pixel_showcase.c  poker_variants_showcase.c  run_animation_tests.sh  simple_poker_demo.c  tournament_full_demo.c  tournament_showcase.c  tournament_simulation.c  use_curated_phh.c
docs/: README.md
mvc/: README.md
mvc/controller/: poker_controller.h
mvc/model/: poker_model.h
mvc/view/: animated_view.c  animated_view.h  animation_engine.c  animation_engine.h  beautiful_view.c  beautiful_view.h  poker_view.h  sprite_renderer.c  sprite_renderer.h
network/: CMakeLists.txt  README.md
network/include/network/: chattr_gossip.h  hand_history.h  network_simulation.h  p2p_protocol.h  phh_export.h  phh_parser.h  poker_log_protocol.h  protocol.h
network/src/: chattr_gossip.c  crypto_utils.c  hand_history.c  hand_history_analyzer.c  network_simulation.c  p2p_protocol.c  p2p_protocol_with_error_handling.c  phh_export.c  phh_parser.c  poker_log_protocol.c  poker_log_protocol_phh.c  protocol.c
server/: CMakeLists.txt
server/include/server/: lobby_system.h  local_simulation_server.h  server.h  tournament_system.h
server/src/: connection_handler.c  lobby_system.c  local_simulation_server.c  p2p_simulation_main.c  server_main.c  table_manager.c  tournament_system.c
sprite-experiments/: EXPERIMENT_PLAN.md  card_dimensions_test.c  cell_aspect_test.c  demo_sprite_library.c  exp01_blitter_comparison.c  exp02_scaling_methods.c  exp04_pixel_vs_character.c  exp05_image_analysis.c  exp07_minimal_test.c  exp09_proper_card_sizing.c  exp10_card_fade_animations.c  exp11_card_selection_highlight_fixed.c  exp15_table_felt_texture.c  exp17_chip_stacks.c  exp20_png_cards_test.c  exp21_card_size_test.c  poker_cards_preview.c  poker_demo_png_cards.c  poker_pixel_demo.c  results_template.txt  run_experiments.md  simple_card_demo.c
sprite-experiments/archive/: debug_card_sizes.c  exp03_terminal_capabilities.c  exp06_file_validation.c  exp08_copy_orca_pattern.c  exp11_card_selection_highlight.c  exp12_card_back_designs.c  exp13_sprite_caching.c  exp14_sprite_stress_test.c  exp16_dealing_animation.c  exp18_player_info_boxes.c  exp19_full_table_layouts.c
src/main/: CMakeLists.txt  main.c  simple_27_draw.c  tournament_27_draw.c
tests/: CMakeLists.txt  test_ai.c  test_basic.c  test_comprehensive.c  test_deck.c  test_game_state.c  test_hand_eval.c  test_integration.c  test_minimal.c  test_network_sim.c  test_p2p_network.c  test_simple.c
tests/benchmarks/: CMakeLists.txt
variants/: CMakeLists.txt  variant_interface.h
variants/draw/: CMakeLists.txt
variants/draw/src/: five_card_draw.c
variants/holdem/: CMakeLists.txt
variants/holdem/src/: holdem.c
variants/lowball/: CMakeLists.txt
variants/lowball/src/: lowball_27_triple.c
variants/omaha/: CMakeLists.txt
variants/omaha/src/: omaha.c
variants/stud/: CMakeLists.txt
variants/stud/src/: razz.c  seven_card_stud.c
